--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -119,6 +119,7 @@ bc.scoop_event_flag=Event
 bd.control=Control
 bd.scoop=SCoop (Multitask)
 bd.dfrobot=DFRobot
+bd.ontrack=Ontrack
 bd.number=Variables/Constants
 bd.operators=Math Operators
 bd.pins=Pins
@@ -132,6 +133,7 @@ bd.linksprite_LinkerKit=Linker Kit
 
 bd.tinkerkit=TinkerKit
 bd.utilities=Generic Hardware
+
 # BlockGenus initlabel
 bg.df_lcd_keypad=DFRobot LCD Keypad
 bg.Tinker_Accmeter=Accelerometer
@@ -199,6 +201,7 @@ bg.df_joystick_module_x=Joystick Module (Axis-X)
 bg.df_joystick_module_y=Joystick Module (Axis-Y)
 bg.df_led=LED Module
 bg.df_led_pwm=LED with brightness
+bg.traffic_light=Trafficlight
 bg.df_line_tracking_sensor=Line Tracking Sensor
 bg.df_mma7260_x=Triple Axis Accelerometer MMA7260 (Axis-X)
 bg.df_mma7260_y=Triple Axis Accelerometer MMA7260 (Axis-Y)
