First new block

--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -200,6 +200,7 @@ bg.df_joystick_module_button=JoyStick Module Button
 bg.df_joystick_module_x=Joystick Module (Axis-X)
 bg.df_joystick_module_y=Joystick Module (Axis-Y)
 bg.df_led=LED Module
+bg.df_traffic_light=Trafficlight
 bg.df_led_pwm=LED with brightness
 bg.traffic_light=Trafficlight
 bg.df_line_tracking_sensor=Line Tracking Sensor
@@ -1456,12 +1457,13 @@ bg.ke-tempe.description=
 bg.ke-psd.description=
 bg.ke-touch.description=
 bg.ke-servo.description=
+bg.traffic_light.description=Trafficlight
 
 bd.jerusalab=Jerusalab
 bg.midi_command=Midi Controller Command
 bg.midi_command.description=Sends a Midi command to the computer via serial connection, to be consumed by application such as Hairless Midi
 bg.midi_note=Midi Note
-bg.Midi_C=C
+bg.Midi_C=Cgit
 bg.Midi_CS=C#
 bg.Midi_D=D
 bg.Midi_DS=D#
