--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -299,6 +299,10 @@ df_buzzer=digitalOutput
 df_buzzer_tone=tone
 df_buzzer_tone_delay=toneTime
 		
+#Ontrack		
+traffic_light=digitalOutput
+
+
 #SeeedStudio
 seeed_joystick=analogInput
 seeed_joystick_button=com.ardublock.translator.block.seeedstudio.GroveJoyStickButtonBlock
