--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -1,3 +1,9 @@
+#ontrack
+bg.ontrack_LCD_Backlight=Backlight
+bg.ontrack_LCD_Backlight.description=Backlight Description
+bg.traffic_light=Trafficlight
+bg.traffic_light.description=Trafficlight
+
 bc.start=start
 bg.repeat_control=repeat between
 bg.repeat_control.description=Repeat the commands with "variable" ranging between "start" and "stop" values. "variable" changes by "increment" after each repetition
@@ -200,9 +206,7 @@ bg.df_joystick_module_button=JoyStick Module Button
 bg.df_joystick_module_x=Joystick Module (Axis-X)
 bg.df_joystick_module_y=Joystick Module (Axis-Y)
 bg.df_led=LED Module
-bg.df_traffic_light=Trafficlight
 bg.df_led_pwm=LED with brightness
-bg.traffic_light=Trafficlight
 bg.df_line_tracking_sensor=Line Tracking Sensor
 bg.df_mma7260_x=Triple Axis Accelerometer MMA7260 (Axis-X)
 bg.df_mma7260_y=Triple Axis Accelerometer MMA7260 (Axis-Y)
@@ -1457,7 +1461,7 @@ bg.ke-tempe.description=
 bg.ke-psd.description=
 bg.ke-touch.description=
 bg.ke-servo.description=
-bg.traffic_light.description=Trafficlight
+
 
 bd.jerusalab=Jerusalab
 bg.midi_command=Midi Controller Command
