--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -301,6 +301,9 @@ df_buzzer_tone_delay=toneTime
 		
 #Ontrack		
 traffic_light=digitalOutput
+ontrack_LCD_RGB=com.ardublock.translator.block.ontrack.LCD_RGB
+ontrack_LCD_Backlight=com.ardublock.translator.block.ontrack.LCD_Backlight
+ontrack_LCD_RGB_Clear=com.ardublock.translator.block.ontrack.LCD_RGB_Clear
 
 
 #SeeedStudio
